elab-stlc-unification-recovery/examples/readme.stderr
error: mismatched types:
  expected: Int
  found: Bool
  ┌─ <stdin>:1:15
  │
1 │ let x : Int := true;
  │                ^^^^
error: unbound type `Foo`
  ┌─ <stdin>:3:16
  │
3 │ let example-1 : Foo -> Int := 3;
  │                 ^^^
error: mismatched types:
  expected: _ -> Int
  found: Int
  ┌─ <stdin>:3:30
  │
3 │ let example-1 : Foo -> Int := 3;
  │                               ^
error: mismatched types:
  expected: Bool
  found: Int
  ┌─ <stdin>:5:11
  │
5 │   fun (x : Bool) y x => x;
  │            ^^^^
error: unexpected parameter
  ┌─ <stdin>:5:17
  │
5 │   fun (x : Bool) y x => x;
  │                  ^
error: unexpected parameter
  ┌─ <stdin>:5:19
  │
5 │   fun (x : Bool) y x => x;
  │                    ^
error: mismatched types:
  expected: Int
  found: Bool
  ┌─ <stdin>:7:4
  │
7 │ x + false
  │     ^^^^^
